k8s/controller/ingress-controller-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: drivetogether-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: localhost
          http:
              paths:
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: api-gateway
                            port:
                                number: 8084
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: drivetogether-front
                            port:
                                number: 80
